--- a/api/example.env
+++ b/api/example.env
@@ -9,6 +9,6 @@ DATABASE_URL="postgresql://user:password@url:port/database?schema=public"
 JWT_SECRET=
 JWT_EXPIRATON= # intentionally blank so in dev it never expires
 
-GOOGLE_OAUTH_CLIENT_ID="513098205800-j6pp1actb46n8ae9iaahutmiba08ubna.apps.googleusercontent.com"
-GOOGLE_OAUTH_CLIENT_SECRET="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"
+GOOGLE_OAUTH_CLIENT_ID=""
+GOOGLE_OAUTH_CLIENT_SECRET=""
 GOOGLE_OAUTH_CALLBACK="http://localhost:5000/auth/login/google/redirect"
